--- a/gradle/dependency-management/agp-versions.properties
+++ b/gradle/dependency-management/agp-versions.properties
@@ -1,4 +1,4 @@
 # Generated - Update by running `./gradlew updateAgpVersions`
-latests=7.3.1,7.4.2,8.0.2,8.1.1,8.2.0-beta06,8.3.0-alpha05
-nightlyBuildId=10874730
+latests=7.3.1,7.4.2,8.0.2,8.1.3,8.2.0-rc03,8.3.0-alpha13
+nightlyBuildId=11101926
 nightlyVersion=8.3.0-dev
