--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -15,7 +15,7 @@
 
 # Build infrastructure
 .teamcity/                                  @gradle/bt-developer-productivity
-.github/                                    @gradle/bt-developer-productivity
+.github/                                    @gradle/bt-developer-productivity @gradle/bt-support # This might need to be more finegrained in the future
 /build-logic/                               @gradle/bt-developer-productivity
 /build-logic-commons/                       @gradle/bt-developer-productivity
 /build-logic-settings/                      @gradle/bt-developer-productivity
@@ -27,6 +27,17 @@ subprojects/internal-build-reports/         @gradle/bt-developer-productivity
 subprojects/internal-integ-testing/         @gradle/bt-developer-productivity
 subprojects/internal-performance-testing/   @gradle/bt-developer-productivity
 subprojects/internal-testing/               @gradle/bt-developer-productivity
+
+# Release coordination
+subprojects/core-platform/              @gradle/bt-support
+subprojects/distributions-dependencies/ @gradle/bt-support
+subprojects/distributions-full/         @gradle/bt-support
+subprojects/performance/                @gradle/bt-support
+subprojects/smoke-test/                 @gradle/bt-support
+subprojects/soak/                       @gradle/bt-support
+
+# Build infrastructure
+platforms/build-infrastructure/ @gradle/bt-developer-productivity
 
 # Architecture Decision Records
 architecture-standards/                     @gradle/bt-architecture-council
@@ -97,17 +108,6 @@ platforms/ide/                    @gradle/bt-ide-experience
 # Currently heavily developed by the bt-ide-experience team.
 platforms/ide/problems/           @gradle/bt-ide-experience
 platforms/ide/ide-native/         @gradle/bt-ide-experience @gradle/bt-native-maintainers
-
-# Release coordination
-subprojects/core-platform/              @gradle/bt-support
-subprojects/distributions-dependencies/ @gradle/bt-support
-subprojects/distributions-full/         @gradle/bt-support
-subprojects/performance/                @gradle/bt-support
-subprojects/smoke-test/                 @gradle/bt-support
-subprojects/soak/                       @gradle/bt-support
-
-# Build infrastructure
-platforms/build-infrastructure/ @gradle/bt-developer-productivity
 
 # Documentation
 platforms/documentation/docs/src/docs/                                                        @gradle/bt-devrel-education
